<resources>
    <string name="app_name">Wifi Attendance System Admin</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="button">Button</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="headline">Headline</string>
    <string name="subtitle">subtitle</string>
    <string name="send_reset_email">Send reset email</string>

    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <!--    <string name="title_notifications">Notifications</string>-->

    <string name="profile">Profile</string>
    <string name="attendance">Attendance</string>
    <string name="stats">Stats</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifications">Notifications</string>
    <string name="let_s_get_to_work">Let\'s get to work</string>
    <string name="check_in">Check In</string>
    <string name="your_hours_will_be_calculated_here">Your hours will be calculated here</string>
    <string name="_24">24</string>
    <string name="joseph_kamal">joseph Kamal</string>
    <string name="josephkamal_gmail_com">Josephkamal@gmail.com</string>
    <string name="_923164944177">+923164944177</string>
    <string name="sr_android_app_developer">Sr. Android App Developer</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home">Home</string>
    <string name="employees">All Employees</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="admin_name">Admin Name</string>
    <string name="admin_mail_com">admin@mail.com</string>
    <string name="add_employee">Add Employee</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="designation">Designation</string>
    <string name="create_employee_profile">Create Employee Profile</string>
    <string name="wifi_s">Wifi(s)</string>
    <string name="open_settings">Open Settings</string>
    <string name="network_id">Network id</string>
    <string name="add_wifi">Add Wifi</string>
    <string name="please_connect_to_the_wifi">Please connect to the wifi</string>
    <string name="you_re_not_connected_to_any_wifi">You\'re not connected to any wifi</string>
    <string name="wifi_name">Wifi Name</string>
    <string name="wifi_id">Wifi id</string>
    <string name="added_by_you">Added by You</string>
    <string name="please_add_wifi_networks">Please press add button to add an wifi network</string>
    <string name="you_denied_permission">You denied permission</string>
    <string name="working_time">Working time</string>
    <string name="logout">Logout</string>
</resources>