<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    app:contentPadding="@dimen/value_12">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/value_72">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profile_image"
            android:layout_width="@dimen/value_72"
            android:layout_height="@dimen/value_72"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/value_12"
            android:background="?colorPrimary"
            android:src="@drawable/ic_person_circle"
            app:shapeAppearanceOverlay="@style/ShapeableImageView.Circular" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/profile_image"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_user_name"
                style="@style/TextAppearance.Material3.TitleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/headline" />

            <TextView
                android:id="@+id/tv_working_time"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/working_time" />

            <TextView
                android:id="@+id/tv_designation"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/designation" />
        </LinearLayout>
    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>