<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/value_12">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_name"
            style="@style/Widget.App.TextInputLayout.Outline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            app:errorIconDrawable="@null"
            app:startIconDrawable="@drawable/ic_person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/value_12" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_phone_number"
            style="@style/Widget.App.TextInputLayout.Outline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            app:errorIconDrawable="@null"
            app:startIconDrawable="@drawable/ic_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/value_12" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_email"
            style="@style/Widget.App.TextInputLayout.Outline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:errorIconDrawable="@null"
            app:startIconDrawable="@drawable/ic_mail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/value_12" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_designation"
            style="@style/Widget.App.TextInputLayout.Outline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/designation"
            app:errorIconDrawable="@null"
            app:startIconDrawable="@drawable/ic_bag">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_designation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/value_12" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_password"
            style="@style/Widget.App.TextInputLayout.Outline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:errorIconDrawable="@null"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/value_36" />


        <dev.azsoft.wifiattendancesystemadmin.views.ExtendedButton
            android:id="@+id/btn_create_employee_profile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/value_56"
            android:backgroundTint="?colorPrimary"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:text="@string/create_employee_profile"
            app:extIndicatorColor="?colorOnPrimary"
            app:isProcessing="false" />


    </LinearLayout>
</ScrollView>

