<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.wifi.AddWifiActivity">

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_circular"
        style="@style/Progressbar.CircularProgressIndicator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:elevation="@dimen/value_36"
        android:visibility="gone"
        app:trackColor="?colorPrimary" />


    <include layout="@layout/place_holder"
        android:id="@+id/place_holder"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/wifi_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/value_12">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/value_56"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/tv_wifi_name"

                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"

                    android:textAlignment="textEnd" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/value_56"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="BSSID" />

                <TextView
                    android:id="@+id/tv_wifi_bssid"

                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textAlignment="textEnd" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/value_56"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/network_id" />

                <TextView
                    android:id="@+id/tv_wifi_network_id"

                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textAlignment="textEnd" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/value_56"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Network IP" />

                <TextView
                    android:id="@+id/tv_wifi_network_ip"
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textAlignment="textEnd" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/value_56"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Mac Address" />

                <TextView
                    android:id="@+id/tv_wifi_mac_address"
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textAlignment="textEnd" />

            </LinearLayout>


            <dev.azsoft.wifiattendancesystemadmin.views.ExtendedButton
                android:id="@+id/btn_add_wifi"
                android:layout_width="match_parent"
                android:layout_height="@dimen/value_56"
                android:backgroundTint="?colorPrimary"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:text="@string/add_wifi" />


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/open_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/open_settings"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_permission_denied"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/you_denied_permission"
        android:visibility="gone" />

</RelativeLayout>